Added css functionality

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-	<title>Brent Westbrook</title>
-	<h3 align=center>Brent Westbrook</h3>
+    <head>
+	    <title>Brent Westbrook</title>
+        <link rel="stylesheet" href="/css/index.css">
+    </head>
+	<h3>Brent Westbrook</h3>
 	<body>
 		<p>CHEM2320 SI</p>
 		<p>bwestbro@stedwards.edu</p>
