Added titrations key

--- a/Other.html
+++ b/Other.html
@@ -4,5 +4,6 @@
 		<h3>Additional Practice Sheets</h3>
 		<a href="AdditionalPractice/Titrations.pdf">Titrations</a>
 		<br>
+		<a href="AdditionalPractice/TitrationsKey.pdf">Titrations Key</a>
 	</body>
 </html>
