Added sample styling

--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <html>
     <head>
-	    <title>Brent Westbrook</title>
-        <link rel="stylesheet" href="/css/index.css">
-    </head>
-	<h3>Brent Westbrook</h3>
-	<body>
-		<p>CHEM2320 SI</p>
-		<p>bwestbro@stedwards.edu</p>
-	<a href="MCPractice.html">MasteringChem Practice</a>
-	<p>
-	<a href="ExamReviews.html">Exam Reviews</a>
-	</p>
-	<p>
-	<a href="Other.html">Additional Practice</a>
-	</p>
-	</body>
+    <title>Brent Westbrook</title>
+    <link rel="stylesheet" href="/css/index.css">
+</head>
+
+<body>
+    <div class="header">
+        <h3>bwestbro</h3>
+        <p>A Brent Westbrook site</p>
+        <p id="pers_info">bwestbro@stedwards.edu</p>
+    </div>
+
+
+    <div class="chem">
+        <p>CHEM2320 SI</p>
+        <a href="MCPractice.html">MasteringChem Practice</a>
+        <p><a href="ExamReviews.html">Exam Reviews</a></p>
+        <p>
+            <a href="Other.html">Additional Practice</a>
+        </p>
+    </div>
+</body>
 </html>	
