--- a/ExamReviews.html
+++ b/ExamReviews.html
@@ -13,8 +13,8 @@
 		<br>
 		<a>Exam 2</a>
 		<br>
-		<a href="ExamReviews/Solutions1.jpg">Exam 3 - Part 1</a>
+		<a href="ExamReviews/Exam3ReviewKey1.jpg">Exam 3 - Part 1</a>
 		<br>
-		<a href="ExamReviews/Solutions2.jpg">Exam 3 - Part 2</a>
+		<a href="ExamReviews/Exam3ReviewKey2.jpg">Exam 3 - Part 2</a>
 	</body>
 </html>
