--- a/Other.html
+++ b/Other.html
@@ -4,6 +4,7 @@
 		<h3>Additional Practice Sheets</h3>
 		<a href="AdditionalPractice/Titrations.pdf">Titrations</a>
 		<br>
-		<a href="AdditionalPractice/TitrationsKey.pdf">Titrations Key</a>
+		<h3>Solutions</h3>
+		<a href="AdditionalPractice/TitrationsKey.pdf">Titrations</a>
 	</body>
 </html>
