--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     <title>Brent Westbrook</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" href="/images/icon.gif" type="image/gif" sizes="16x16">
 </head>
 
 <body>
