--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
     <title>Brent Westbrook</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="/images/icon.gif" type="image/gif" sizes="16x16">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/icon.gif" type="image/gif" sizes="16x16">
 </head>
 
 <body>
