Fixed links between pages

--- a/courses.html
+++ b/courses.html
@@ -3,6 +3,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="site.css">
+<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
 </head>
 
 <div class="sidenav">
