--- a/site.html
+++ b/site.html
@@ -3,9 +3,9 @@
 
 <head>
 <title>bwestbro.com</title>
-<link rel="stylesheet" type="text/css" href="site.css">
-<link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-<script src="site.js"></script>
+<link rel="stylesheet" type="text/css" href="css/site.css">
+<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+<script src="js/site.js"></script>
 </head>
 
 <body>
@@ -31,7 +31,7 @@ at St. Edward's University in Austin, Texas. I am also entering my fourth
 semester as a Supplemental Instructor at St. Edward's, which is probably why
 you are here. Feel free to explore, but to find worksheets for this semester,
 select your course in the menu to the left.</p>
-<img src="brent.jpg" alt="Brent">
+<img src="images/brent.jpg" alt="Brent">
 </div>
 	
 </body>
