--- a/sp18.html
+++ b/sp18.html
@@ -3,8 +3,9 @@
 
 <head>
 <title>bwestbro.com</title>
-<link rel="stylesheet" type="text/css" href="site.css">
-<script src="site.js"></script>
+<link rel="stylesheet" type="text/css" href="css/site.css">
+<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+<script src="js/site.js"></script>
 </head>
 
 <body>
