--- a/tools.html
+++ b/tools.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="site.css">
-<script src="site.js"></script>
+<link rel="stylesheet" type="text/css" href="css/site.css">
+<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+<script src="js/site.js"></script>
 </head>
 
 <div class="sidenav">
