--- a/fa18.html
+++ b/fa18.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="sidenav">
-	<a href="site.html">About</a>
+	<a href="index.html">About</a>
 	<div class="dropdown">
 	<a onclick="myFunction()" class="dropbtn">Courses</a>
 	<div id="myDropdown" class="dropdown-content">
