--- a/pubs.html
+++ b/pubs.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="sidenav">
-	<a href="site.html">About</a>
+	<a href="index.html">About</a>
 	<div class="dropdown">
 	<a onclick="myFunction()" class="dropbtn">Courses</a>
 	<div id="myDropdown" class="dropdown-content">
