why did I make a pi branch if I'm not going to use it

--- a/pubs.html
+++ b/pubs.html
@@ -24,7 +24,10 @@
 
 <div class="main">
 <body>
-<p>Coming soon</p>
+<p>
+[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide<br>
+<a href="http://dx.doi.org/10.1039/C8CP05378B"
+       class="pubs">DOI Link</a>
 </body>
 </div>
 
