--- a/sp18.html
+++ b/sp18.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="main">
-<h1>Spring 2018</h1>
+<h1>CHEM 2320 Spring 2018</h1>
 <h3>MasteringChemistry Practice</h3>
 <a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a>
 <br>
@@ -44,6 +44,8 @@
 <a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a>
 <br>
 <a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a>
+<br>
+<a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a>
 <br>
 <h3>Additional Practice</h3>
 <a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a>
