--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 
 <head>
+<title>bwestbro.com</title>
 <link rel="stylesheet" type="text/css" href="css/site.css">
 <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
 <script src="js/site.js"></script>
 </head>
 
+<body>
 <div class="sidenav">
 	<a href="..">About</a>
 	<div class="dropdown">
@@ -23,12 +25,15 @@
 </div>
 
 <div class="main">
-<body>
-<p>
-[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide<br>
-<a href="http://dx.doi.org/10.1039/C8CP05378B"
-       class="pubs">DOI Link</a>
-</body>
+<h1>bwestbro.com</h1>
+<p>My name is Brent Westbrook, and I am currently a senior chemistry major
+at St. Edward's University in Austin, Texas. I am also entering my fourth
+semester as a Supplemental Instructor at St. Edward's, which is probably why
+you are here. Feel free to explore, but to find worksheets for this semester,
+select your course in the menu to the left.</p>
+<img src="../resources/images/brent.jpg" alt="Brent">
 </div>
+	
+</body>
 
 </html>
