--- a/trash/pubs/pubs.html
+++ b/trash/pubs/pubs.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="sidenav">
-	<a href="../index/index.html">About</a>
+	<a href="..">About</a>
 	<div class="dropdown">
 	<a onclick="myFunction()" class="dropbtn">Courses</a>
 	<div id="myDropdown" class="dropdown-content">
