--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <title>bwestbro.com</title>
 <link rel="stylesheet" type="text/css" href="css/site.css">
-<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="resources/images/favicon.png" type="image/gif" sizes="16x16">
 <script src="js/site.js"></script>
 </head>
 
