--- a/sp18.html
+++ b/sp18.html
@@ -3,25 +3,25 @@
 
 <head>
 <title>bwestbro.com</title>
-<link rel="stylesheet" type="text/css" href="../site.css">
-<link rel="icon" href="../resources/images/favicon.png" type="image/gif" sizes="16x16">
-<script src="../site.js"></script>
+<link rel="stylesheet" type="text/css" href="css/site.css">
+<link rel="icon" href="resources/images/favicon.png" type="image/gif" sizes="16x16">
+<script src="js/site.js"></script>
 </head>
 
 <body>
 <div class="sidenav">
-	<a href="../index/index.html">About</a>
+	<a href="..">About</a>
 	<div class="dropdown">
 	<a onclick="myFunction()" class="dropbtn">Courses</a>
 	<div id="myDropdown" class="dropdown-content">
-		<a href="../sp18/sp18.html">Spring 2018</a>
-		<a href="../fa18/fa18.html">Fall 2018</a>
-	<a id="custom" href="../pubs/pubs.html">Publications</a>
-	<a id="custom" href="../tools/tools.html">Tools</a>
+		<a href="sp18.html">Spring 2018</a>
+		<a href="fa18.html">Fall 2018</a>
+	<a id="custom" href="pubs.html">Publications</a>
+	<a id="custom" href="tools.html">Tools</a>
 	</div>
 	</div>
-	<a href="../pubs/pubs.html">Publications</a>
-	<a href="../tools/tools.html">Tools</a>
+	<a href="pubs.html">Publications</a>
+	<a href="tools.html">Tools</a>
 </div>
 
 <div class="main">
