--- a/tools.html
+++ b/tools.html
@@ -3,7 +3,7 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="css/site.css">
-<link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="resources/images/favicon.png" type="image/gif" sizes="16x16">
 <script src="js/site.js"></script>
 </head>
 
