fixed links and removed table formatting

--- a/fa18.html
+++ b/fa18.html
@@ -23,100 +23,47 @@
 
 <div class="main">
 <h1>CHEM 2320 Fall 2018</h1>
-<table style="width:100%">
-	<tr>
-		<th><h3>Topic</h3></th>
-		<th><h3>Worksheet</h3></th>
-	</tr>
-	<tr>
-		<th>Errors in Measurement; Accuracy, Precision
-			and Tolerance; Solutions and Dilutions</th>
-		<th><a href="ws1.pdf">Worksheet 1</a>
-	</tr>
-	<tr>
-		<th>Spectroscopy</th>
-		<th><a href="ws2.pdf">Worksheet 2</a>
-	</tr>
-	<tr>
-		<th>Beer-Lambert Law</th>
-		<th><a href="ws3.pdf">Worksheet 3</a>
-	</tr>
-	<tr>
-		<th>Instrumental Calibration</th>
-		<th><a href="ws3b.pdf">Worksheet 3b</a>
-	</tr>
-	<tr>
-		<th>Quality Assurance</th>
-		<th><a href="ws4.pdf">Worksheet 4</a>
-	</tr>
-	<tr>
-		<th>Exam 1 Review</th>
-		<th><a href="ExamReview1.pdf">Exam 1 Review</a>
-	</tr>
-	<tr>
-		<th>Reaction Rates</th>
-		<th><a href="ws5.pdf">Worksheet 5</a>
-	</tr>
-	<tr>
-		<th>Differential Rate Laws</th>
-		<th><a href="ws6.pdf">Worksheet 6</a>
-	</tr>
-	<tr>
-		<th>Integrated Rate Laws</th>
-		<th><a href="ws7.pdf">Worksheet 7</a>
-	</tr>
-	<tr>
-		<th>Equilibrium</th>
-		<th><a href="ws8.pdf">Worksheet 8</a>
-	</tr>
-	<tr>
-		<th>Acids and Bases</th>
-		<th><a href="ws9.pdf">Worksheet 9</a>
-	</tr>
-	<tr>
-		<th>Ionization</th>
-		<th><a href="ws10.pdf">Worksheet 10</a>
-	</tr>
-	<tr>
-		<th></th>
-		<th><a href="key10.pdf">Worksheet 10 Key</a>
-	</tr>
-	<tr>
-		<th>Exam 2 Review</th>
-		<th><a href="exam2.pdf">Exam 2 Review</a>
-	</tr>
-	<tr>
-		<th></th>
-		<th><a href="exam2key.pdf">Exam 2 Review Key</a>
-	</tr>
-	<tr>
-		<th>Acid-Base Distribution</th>
-		<th><a href="ws11.pdf">Worksheet 11</a>
-	</tr>
-	<tr>
-		<th>Buffers</th>
-		<th><a href="ws12.pdf">Worksheet 12</a>
-	</tr>
-	<tr>
-		<th>Titrations</th>
-		<th><a href="ws13.pdf">Worksheet 13</a>
-	</tr>
-		<th>Redox</th>
-		<th><a href="ws14.pdf">Worksheet 14</a>
-	</tr>
-	<tr>
-		<th>Exam 3 Review</th>
-		<th><a href="exam3.pdf">Exam 3 Review</a>
-	</tr>
-	<tr>
-		<th>Exam 3 Review Key</th>
-		<th><a href="exam3key.pdf">Exam 3 Review Key</a>
-	</tr>
-	<tr>
-		<th>Chromatography</th>
-		<th><a href="ws15.pdf">Worksheet 15</a>
-	</tr>
-</table>
+		<h3>Worksheets</h3>
+		<a href="./fa18/ws1.pdf">Errors in Measurement</a>
+		<br>
+		<a href="./fa18/ws2.pdf">Spectroscopy</a>
+		<br>
+		<a href="./fa18/ws3.pdf">Beer-Lambert Law</a>
+		<br>
+		<a href="./fa18/ws3b.pdf">Instrumental Calibration</a>
+		<br>
+		<a href="./fa18/ws4.pdf">Quality Assurance</a>
+		<br>
+		<a href="./fa18/ws5.pdf">Reaction Rates</a>
+		<br>
+		<a href="./fa18/ws6.pdf">Differential Rate Laws</a>
+		<br>
+		<a href="./fa18/ws7.pdf">Integrated Rate Laws</a>
+		<br>
+		<a href="./fa18/ws8.pdf">Equilibrium</a>
+		<br>
+		<a href="./fa18/ws9.pdf">Acids and Bases</a>
+		<br>
+		<a href="./fa18/ws10.pdf">Ionization</a>
+		<br>
+		<a href="./fa18/ws11.pdf">Acid-Base Distribution</a>
+		<br>
+		<a href="./fa18/ws12.pdf">Buffers</a>
+		<br>
+		<a href="./fa18/ws13.pdf">Titrations</a>
+		<br>
+		<a href="./fa18/ws14.pdf">Redox</a>
+		<br>
+		<a href="./fa18/ws15.pdf">Chromatography</a>
+		<br>
+
+		<h3>Exam Reviews</h3>
+		<a href="./fa18/exam1.pdf">Exam 1 Review</a>
+		<br>
+		<a href="./fa18/exam2.pdf">Exam 2 Review</a>
+		<br>
+		<a href="./fa18/exam3.pdf">Exam 3 Review</a>
+		<br>
 </div>
 	
 </body>
