--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="main">
 <h1>bwestbro.com</h1>
 <p>My name is Brent Westbrook, and I am currently a senior chemistry major
-at St. Edward's University in Austin, Texas. I am also entering my fourth
+at St. Edward's University in Austin, Texas. I am also entering my fifth
 semester as a Supplemental Instructor at St. Edward's, which is probably why
 you are here. Feel free to explore, but to find worksheets for this semester,
 select your course in the menu to the left.</p>
