--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <title>bwestbro.com</title>
 <link rel="stylesheet" type="text/css" href="./site.css">
 <link rel="icon" href="./resources/images/favicon.png" type="image/gif" sizes="16x16">
@@ -10,16 +11,6 @@
 </head>
 
 <body>
-<ul class="sidenav">
-		<li><a class="sidenav-item" href="index.html">About</a></li>
-		<li><a class="dropbtn">Courses</a></li>	
-		<div id="dropdown">
-			<li><a href="./sp18.html">Spring 2018</a></li>	
-			<li><a href="./fa18.html">Fall 2018</a></li>	
-		</div>
-			<li><a class="sidenav-item" href="./pubs.html">Publications</a></li>	
-			<li><a class="sidenav-item" href="./tools.html">Tools</a></li>	
-</ul>
 
 <div class="main">
 <h1>bwestbro.com</h1>
@@ -30,6 +21,80 @@ you are here. Feel free to explore, but to find worksheets for this semester,
 select your course in the menu to the left.</p>
 <img src="./resources/images/brent.jpg" alt="Brent">
 </div>
+
+<div class="main">
+	<h1>CHEM 2320 Spring 2018</h1>
+	<h3>MasteringChemistry Practice</h3>
+	<a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a>
+	<br>
+	<a href="sp18/MCPractice/MC04Practice.pdf">MC04 -  Equilibrium</a>
+	<br>
+	<a href="sp18/MCPractice/MC06Practice.pdf">MC06 -  pH</a>
+	<br>
+	<a href="sp18/MCPractice/MC07Practice.pdf">MC07 -  Salts</a>
+	<br>
+	<a href="sp18/MCPractice/MC09Practice.pdf">MC09 -  Buffers</a>
+	<br>
+	<a href="sp18/MCPractice/MC10Practice.pdf">MC10 -  Titrations</a>
+	<br>
+	<a href="sp18/MCPractice/MC11Practice.pdf">MC11 -  Electrochemistry</a>
+	<h3>Exam Reviews</h3>
+	<a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a>
+	<br>
+	<a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a>
+	<br>
+	<a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a>
+	<br>
+	<h3>Additional Practice</h3>
+	<a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a>
+	<br>
+	<a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a>
+	</div>
+
+	<div class="main">
+		<h1>CHEM 2320 Fall 2018</h1>
+				<h3>Worksheets</h3>
+				<a href="./fa18/ws1.pdf">Errors in Measurement</a>
+				<br>
+				<a href="./fa18/ws2.pdf">Spectroscopy</a>
+				<br>
+				<a href="./fa18/ws3.pdf">Beer-Lambert Law</a>
+				<br>
+				<a href="./fa18/ws3b.pdf">Instrumental Calibration</a>
+				<br>
+				<a href="./fa18/ws4.pdf">Quality Assurance</a>
+				<br>
+				<a href="./fa18/ws5.pdf">Reaction Rates</a>
+				<br>
+				<a href="./fa18/ws6.pdf">Differential Rate Laws</a>
+				<br>
+				<a href="./fa18/ws7.pdf">Integrated Rate Laws</a>
+				<br>
+				<a href="./fa18/ws8.pdf">Equilibrium</a>
+				<br>
+				<a href="./fa18/ws9.pdf">Acids and Bases</a>
+				<br>
+				<a href="./fa18/ws10.pdf">Ionization</a>
+				<br>
+				<a href="./fa18/ws11.pdf">Acid-Base Distribution</a>
+				<br>
+				<a href="./fa18/ws12.pdf">Buffers</a>
+				<br>
+				<a href="./fa18/ws13.pdf">Titrations</a>
+				<br>
+				<a href="./fa18/ws14.pdf">Redox</a>
+				<br>
+				<a href="./fa18/ws15.pdf">Chromatography</a>
+				<br>
+		
+				<h3>Exam Reviews</h3>
+				<a href="./fa18/exam1.pdf">Exam 1 Review</a>
+				<br>
+				<a href="./fa18/exam2.pdf">Exam 2 Review</a>
+				<br>
+				<a href="./fa18/exam3.pdf">Exam 3 Review</a>
+				<br>
+		</div>
 	
 </body>
 
