--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ select your course in the menu to the left.</p>
 <img src="./resources/images/brent.jpg" alt="Brent">
 </div>
 
-<div class="main">
+<div class="spring-18">
 	<h1>CHEM 2320 Spring 2018</h1>
 	<h3>MasteringChemistry Practice</h3>
 	<a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a>
@@ -51,7 +51,7 @@ select your course in the menu to the left.</p>
 	<a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a>
 	</div>
 
-	<div class="main">
+	<div class="fall-18">
 		<h1>CHEM 2320 Fall 2018</h1>
 				<h3>Worksheets</h3>
 				<a href="./fa18/ws1.pdf">Errors in Measurement</a>
