added inline block spring-18 and adjusted about

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <p>My name is Brent Westbrook, and I am currently a senior chemistry major
 at St. Edward's University in Austin, Texas. I am also entering my fifth
 semester as a Supplemental Instructor at St. Edward's, which is probably why
-you are here. Feel free to explore, but to find worksheets for this semester,
-select your course in the menu to the left.</p>
+you are here. Feel free to explore, but to find worksheets for this and previous 
+semesters, scroll down to your course.</p>
 <img src="./resources/images/brent.jpg" alt="Brent">
 </div>
 
@@ -94,6 +94,13 @@ select your course in the menu to the left.</p>
 				<br>
 				<a href="./fa18/exam3.pdf">Exam 3 Review</a>
 				<br>
+		</div>
+
+		<div class="publications">
+		<h1>Publications</h1>
+		[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide<br>
+		<a href="http://dx.doi.org/10.1039/C8CP05378B"
+			class="pubs">DOI Link</a>
 		</div>
 	
 </body>
