--- a/index.html
+++ b/index.html
@@ -22,85 +22,56 @@ semesters, scroll down to your course.</p>
 <img src="./resources/images/brent.jpg" alt="Brent">
 </div>
 
-<div class="spring-18">
+<div class="spring-18 course">
 	<h1>CHEM 2320 Spring 2018</h1>
 	<h3>MasteringChemistry Practice</h3>
-	<a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a>
-	<br>
-	<a href="sp18/MCPractice/MC04Practice.pdf">MC04 -  Equilibrium</a>
-	<br>
-	<a href="sp18/MCPractice/MC06Practice.pdf">MC06 -  pH</a>
-	<br>
-	<a href="sp18/MCPractice/MC07Practice.pdf">MC07 -  Salts</a>
-	<br>
-	<a href="sp18/MCPractice/MC09Practice.pdf">MC09 -  Buffers</a>
-	<br>
-	<a href="sp18/MCPractice/MC10Practice.pdf">MC10 -  Titrations</a>
-	<br>
-	<a href="sp18/MCPractice/MC11Practice.pdf">MC11 -  Electrochemistry</a>
+	<p><a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a></p>
+	<p><a href="sp18/MCPractice/MC04Practice.pdf">MC04 -  Equilibrium</a></p>
+	<p><a href="sp18/MCPractice/MC06Practice.pdf">MC06 -  pH</a></p>
+	<p><a href="sp18/MCPractice/MC07Practice.pdf">MC07 -  Salts</a></p>
+	<p><a href="sp18/MCPractice/MC09Practice.pdf">MC09 -  Buffers</a></p>
+	<p><a href="sp18/MCPractice/MC10Practice.pdf">MC10 -  Titrations</a></p>
+	<p><a href="sp18/MCPractice/MC11Practice.pdf">MC11 -  Electrochemistry</a></p>
 	<h3>Exam Reviews</h3>
-	<a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a>
-	<br>
-	<a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a>
-	<br>
-	<a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a>
-	<br>
+	<p><a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a></p>
+	<p><a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a></p>
+	<p><a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a></p>
 	<h3>Additional Practice</h3>
-	<a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a>
-	<br>
-	<a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a>
+	<a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a></p>
+	<p><a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a></p>
 	</div>
 
-	<div class="fall-18">
+	<div class="fall-18 course">
 		<h1>CHEM 2320 Fall 2018</h1>
 				<h3>Worksheets</h3>
-				<a href="./fa18/ws1.pdf">Errors in Measurement</a>
-				<br>
-				<a href="./fa18/ws2.pdf">Spectroscopy</a>
-				<br>
-				<a href="./fa18/ws3.pdf">Beer-Lambert Law</a>
-				<br>
-				<a href="./fa18/ws3b.pdf">Instrumental Calibration</a>
-				<br>
-				<a href="./fa18/ws4.pdf">Quality Assurance</a>
-				<br>
-				<a href="./fa18/ws5.pdf">Reaction Rates</a>
-				<br>
-				<a href="./fa18/ws6.pdf">Differential Rate Laws</a>
-				<br>
-				<a href="./fa18/ws7.pdf">Integrated Rate Laws</a>
-				<br>
-				<a href="./fa18/ws8.pdf">Equilibrium</a>
-				<br>
-				<a href="./fa18/ws9.pdf">Acids and Bases</a>
-				<br>
-				<a href="./fa18/ws10.pdf">Ionization</a>
-				<br>
-				<a href="./fa18/ws11.pdf">Acid-Base Distribution</a>
-				<br>
-				<a href="./fa18/ws12.pdf">Buffers</a>
-				<br>
-				<a href="./fa18/ws13.pdf">Titrations</a>
-				<br>
-				<a href="./fa18/ws14.pdf">Redox</a>
-				<br>
-				<a href="./fa18/ws15.pdf">Chromatography</a>
-				<br>
+				<p><a href="./fa18/ws1.pdf">Errors in Measurement</a></p>
+				<p><a href="./fa18/ws2.pdf">Spectroscopy</a></p>
+				<p><a href="./fa18/ws3.pdf">Beer-Lambert Law</a></p>
+				<p><a href="./fa18/ws3b.pdf">Instrumental Calibration</a></p>
+				<p><a href="./fa18/ws4.pdf">Quality Assurance</a></p>
+				<p><a href="./fa18/ws5.pdf">Reaction Rates</a></p>
+				<p><a href="./fa18/ws6.pdf">Differential Rate Laws</a></p>
+				<p><a href="./fa18/ws7.pdf">Integrated Rate Laws</a></p>
+				<p><a href="./fa18/ws8.pdf">Equilibrium</a></p>
+				<p><a href="./fa18/ws9.pdf">Acids and Bases</a></p>
+				<p><a href="./fa18/ws10.pdf">Ionization</a></p>
+				<p><a href="./fa18/ws11.pdf">Acid-Base Distribution</a></p>
+				<p><a href="./fa18/ws12.pdf">Buffers</a></p>
+				<p><a href="./fa18/ws13.pdf">Titrations</a></p>
+				<p><a href="./fa18/ws14.pdf">Redox</a></p>
+				<p><a href="./fa18/ws15.pdf">Chromatography</a></p>
 		
 				<h3>Exam Reviews</h3>
-				<a href="./fa18/exam1.pdf">Exam 1 Review</a>
-				<br>
-				<a href="./fa18/exam2.pdf">Exam 2 Review</a>
-				<br>
-				<a href="./fa18/exam3.pdf">Exam 3 Review</a>
-				<br>
+				<p><a href="./fa18/exam1.pdf">Exam 1 Review</a></p>
+				<p><a href="./fa18/exam2.pdf">Exam 2 Review</a></p>
+				<p><a href="./fa18/exam3.pdf">Exam 3 Review</a></p>
 		</div>
 
 		<div class="publications">
 		<h1>Publications</h1>
-		[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide<br>
-		<a href="http://dx.doi.org/10.1039/C8CP05378B"
-			class="pubs">DOI Link</a>
+		<p>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide</p>
+		<p><a href="http://dx.doi.org/10.1039/C8CP05378B">
+			DOI Link</a></p>
 		</div>
 	
 </body>
