brent to the side

--- a/index.html
+++ b/index.html
@@ -12,34 +12,35 @@
 
 <body>
 
-<div class="main">
-<h1>bwestbro.com</h1>
-<p>My name is Brent Westbrook, and I am currently a senior chemistry major
-at St. Edward's University in Austin, Texas. I am also entering my fifth
-semester as a Supplemental Instructor at St. Edward's, which is probably why
-you are here. Feel free to explore, but to find worksheets for this and previous 
-semesters, scroll down to your course.</p>
-<img src="./resources/images/brent.jpg" alt="Brent">
-</div>
+<h1 class="header">bwestbro.com</h1>
 
-<div class="spring-18 course">
-	<h1>CHEM 2320 Spring 2018</h1>
-	<h3>MasteringChemistry Practice</h3>
-	<p><a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a></p>
-	<p><a href="sp18/MCPractice/MC04Practice.pdf">MC04 -  Equilibrium</a></p>
-	<p><a href="sp18/MCPractice/MC06Practice.pdf">MC06 -  pH</a></p>
-	<p><a href="sp18/MCPractice/MC07Practice.pdf">MC07 -  Salts</a></p>
-	<p><a href="sp18/MCPractice/MC09Practice.pdf">MC09 -  Buffers</a></p>
-	<p><a href="sp18/MCPractice/MC10Practice.pdf">MC10 -  Titrations</a></p>
-	<p><a href="sp18/MCPractice/MC11Practice.pdf">MC11 -  Electrochemistry</a></p>
-	<h3>Exam Reviews</h3>
-	<p><a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a></p>
-	<p><a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a></p>
-	<p><a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a></p>
-	<h3>Additional Practice</h3>
-	<a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a></p>
-	<p><a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a></p>
+	<div class="main">
+	<img class="headshot" src="./resources/images/brent.jpg" alt="Brent">
+	<p>My name is Brent Westbrook, and I am currently a senior chemistry major
+	at St. Edward's University in Austin, Texas. I am also entering my fifth
+	semester as a Supplemental Instructor at St. Edward's, which is probably why
+	you are here. Feel free to explore, but to find worksheets for this and previous 
+	semesters, scroll down to your course.</p>
 	</div>
+
+	<div class="spring-18 course">
+		<h1>CHEM 2320 Spring 2018</h1>
+		<h3>MasteringChemistry Practice</h3>
+		<p><a href="sp18/MCPractice/MC03Practice.pdf">MC03 -  Kinetics</a></p>
+		<p><a href="sp18/MCPractice/MC04Practice.pdf">MC04 -  Equilibrium</a></p>
+		<p><a href="sp18/MCPractice/MC06Practice.pdf">MC06 -  pH</a></p>
+		<p><a href="sp18/MCPractice/MC07Practice.pdf">MC07 -  Salts</a></p>
+		<p><a href="sp18/MCPractice/MC09Practice.pdf">MC09 -  Buffers</a></p>
+		<p><a href="sp18/MCPractice/MC10Practice.pdf">MC10 -  Titrations</a></p>
+		<p><a href="sp18/MCPractice/MC11Practice.pdf">MC11 -  Electrochemistry</a></p>
+		<h3>Exam Reviews</h3>
+		<p><a href="sp18/ExamReviews/Exam2Review.pdf">Exam 2 Review</a></p>
+		<p><a href="sp18/ExamReviews/Exam3Review.pdf">Exam 3 Review</a></p>
+		<p><a href="ExamReviews/FinalExamReview.pdf">Final Exam Review</a></p>
+		<h3>Additional Practice</h3>
+		<p><a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a></p>
+		<p><a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a></p>
+		</div>
 
 	<div class="fall-18 course">
 		<h1>CHEM 2320 Fall 2018</h1>
@@ -60,19 +61,18 @@ semesters, scroll down to your course.</p>
 				<p><a href="./fa18/ws13.pdf">Titrations</a></p>
 				<p><a href="./fa18/ws14.pdf">Redox</a></p>
 				<p><a href="./fa18/ws15.pdf">Chromatography</a></p>
-		
 				<h3>Exam Reviews</h3>
 				<p><a href="./fa18/exam1.pdf">Exam 1 Review</a></p>
 				<p><a href="./fa18/exam2.pdf">Exam 2 Review</a></p>
 				<p><a href="./fa18/exam3.pdf">Exam 3 Review</a></p>
 		</div>
 
-		<div class="publications">
+	<div class="publications">
 		<h1>Publications</h1>
 		<p>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide</p>
 		<p><a href="http://dx.doi.org/10.1039/C8CP05378B">
 			DOI Link</a></p>
-		</div>
+	</div>
 	
 </body>
 
