--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
 <h1 class="header">bwestbro.com</h1>
 
 	<div class="main">
-	<img class="headshot" src="./resources/images/brent.jpg" alt="Brent">
-	<p>My name is Brent Westbrook, and I am currently a senior chemistry major
-	at St. Edward's University in Austin, Texas. I am also entering my fifth
-	semester as a Supplemental Instructor at St. Edward's, which is probably why
-	you are here. Feel free to explore, but to find worksheets for this and previous 
-	semesters, scroll down to your course.</p>
+		<h1>About</h1>
+		<img class="headshot" src="./resources/images/brent.jpg" alt="Brent">
+		<p>My name is Brent Westbrook, and I am currently a senior chemistry major
+		at St. Edward's University in Austin, Texas. I am also entering my fifth
+		semester as a Supplemental Instructor at St. Edward's, which is probably why
+		you are here. Feel free to explore, but to find worksheets for this and previous 
+		semesters, scroll down to your course.</p>
+
+	<div class="publications">
+		<h1>Publications</h1>
+		<ul>
+		<li>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide
+		<p><a href="http://dx.doi.org/10.1039/C8CP05378B">DOI Link</a></p></li>
+		</ul>
+	</div>
 	</div>
 
 	<div class="spring-18 course">
@@ -67,12 +76,7 @@
 				<p><a href="./fa18/exam3.pdf">Exam 3 Review</a></p>
 		</div>
 
-	<div class="publications">
-		<h1>Publications</h1>
-		<p>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide</p>
-		<p><a href="http://dx.doi.org/10.1039/C8CP05378B">
-			DOI Link</a></p>
-	</div>
+	
 	
 </body>
 
