made everything level at the top and added spring 2019

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		you are here. Feel free to explore, but to find worksheets for this and previous 
 		semesters, scroll down to your course.</p>
 
-	<div class="publications">
-		<h1>Publications</h1>
-		<ul>
-		<li>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide
-		<p><a href="http://dx.doi.org/10.1039/C8CP05378B">DOI Link</a></p></li>
-		</ul>
-	</div>
+		<div class="publications">
+			<h1>Publications</h1>
+			<ul>
+			<li>[1] B.R. Westbrook, K.M. Dreux, G.S. Tschumper, J.S. Francisco and R.C. Fortenberry, <em>PCCP</em>, (2018). Binding of the Atomic Cations Hydrogen through Argon to Water and Hydrogen Sulfide
+			<p><a href="http://dx.doi.org/10.1039/C8CP05378B">DOI Link</a></p></li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="spring-18 course">
@@ -49,7 +49,7 @@
 		<h3>Additional Practice</h3>
 		<p><a href="sp18/AdditionalPractice/Titrations.pdf">Titrations</a></p>
 		<p><a href="sp18/AdditionalPractice/MoreBuffers.pdf">Salts, Buffers, and Titrations</a></p>
-		</div>
+	</div>
 
 	<div class="fall-18 course">
 		<h1>CHEM 2320 Fall 2018</h1>
@@ -74,9 +74,13 @@
 				<p><a href="./fa18/exam1.pdf">Exam 1 Review</a></p>
 				<p><a href="./fa18/exam2.pdf">Exam 2 Review</a></p>
 				<p><a href="./fa18/exam3.pdf">Exam 3 Review</a></p>
-		</div>
+	</div>
 
-	
+	<div class="spring-19 course">
+		<h1>CHEM 2320 Spring 2019</h1>
+		<h3>Worksheets</h3>
+		<p><a href="">Worksheet 1</a></p>
+	</div>
 	
 </body>
 
