added test blog to blogs page

--- a/src/blogs/running-log.html
+++ b/src/blogs/running-log.html
@@ -1,3 +1,4 @@
+<div data-component="RunningLog">
 <p>
 A Running Log in Org Mode
 </p>
@@ -79,3 +80,4 @@ a quick search I found <a href="https://emacs.stackexchange.com/questions/38135/
 org-table, which may come in handy in the future. Another interesting idea for the future will be 
 plotting my data with Org Plot, but I have not yet implemented this feature.
 </p>
+</div>
