update link colors, fix typo in latex, and update manuscript status

--- a/blogs/latex.html
+++ b/blogs/latex.html
@@ -12,8 +12,9 @@
 <body>
 <div id="content" class="content">
 <p>
-If you're here to copy and paste the config <a href="#org79ab8f7">use this link</a> file
-otherwise enjoy reading!
+If you're here to copy and paste the full config
+file, <a href="#org79ab8f7">use this link</a>. Otherwise enjoy
+reading!
 </p>
 
 <div id="outline-container-org7288a37" class="outline-2">
